load("@bazel_util//generate:rules.bzl", "generate")
load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_file", "js_library")
load("//nodejs:rules.bzl", "nodejs_binary")
load("//rollup:rules.bzl", "rollup_bundle")
load("//tools/javascript:rules.bzl", "js_gen")
load("//typescript:rules.bzl", "ts_library")

rollup_bundle(
    name = "bundle",
    config = ":rollup_config",
    dep = ":lib",
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/typescript-config",
    descriptors = ["package.json"],
)

generate(
    name = "gen",
    srcs = glob(["dist/**/*.js"]),
    data = [":gen_bundle"],
    data_prefix = "dist",
    data_strip_prefix = "bundle",
    visibility = ["//:__subpackages__"],
)

js_gen(
    name = "gen_bundle",
    src = ":bundle",
)

js_library(
    name = "dist_lib",
    srcs = glob(["dist/**/*.js"]),
    root = ":root",
    deps = ["@npm//argparse:lib"],
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    deps = [
        "//util/argparse:lib",
        "@npm//@types/argparse:lib",
        "@npm//@types/node:lib",
        "@npm//argparse:lib",
    ],
)

nodejs_binary(
    name = "bin",
    dep = ":dist_lib",
    main = "dist/bundle.js",
    node = "//tools/nodejs",
    node_options = ["--title=ts-config"],
    visibility = ["//visibility:public"],
)

js_file(
    name = "rollup_config",
    src = "rollup.config.js",
    root = ":root",
    deps = [
        "@npm//@rollup/plugin-commonjs:lib",
        "@npm//@rollup/plugin-node-resolve:lib",
    ],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)
