load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/util-argparse",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = [
        "@better_rules_javascript_npm//@types/argparse:lib",
        "@better_rules_javascript_npm//argparse:lib",
    ],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)
