load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compile_deps = [
        "@npm//@types/node:lib",
        "@npm//webpack:lib",
    ],
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    module = "commonjs",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = ["@npm//enhanced-resolve:lib"],
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/webpack-config",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)
