alias(
    name = "webpack",
    actual = "@npm//webpack:lib",
    visibility = ["//webpack:__subpackages__"],
)

alias(
    name = "webpack_cli",
    actual = "@npm//webpack-cli:lib",
    visibility = ["//webpack:__subpackages__"],
)

alias(
    name = "webpack_dev_server",
    actual = "@npm//webpack-dev-server:lib",
    visibility = ["//webpack:__subpackages__"],
)
